<resources>
    <string name="app_name">NikeHealth</string>
    <string name="datos">Datos personales</string>
    <string name="alimentacion">Alimentación</string>
    <string name="habitos">Hábitos</string>
    <string name="salud">Salud</string>

    <string name="faltadatos">1.- Falta registrar sus datos generales</string>
    <string name="faltaalimentacion">2.- Falta registrar sus datos alimenticios</string>
    <string name="faltahabitos">3.- Falta registrar sus hábitos y actividades</string>
    <string name="faltasalud">(Opcional) Falta registrar sus datos acerca de su salud con datos específicos</string>

    <string name="Introduccion">Para empezar su diagnóstico inicie el registro de los formularios dando clic en el menú en el orden que estan los números.\n </string>
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>
    <string name="R">Registrar</string>
    <string name="txt1">Inicio de sesión</string>
    <string name="correo">Ingresa correo electrónico</string>
    <string name="contraseña">Ingresa la contraseña: </string>
    <string name="guardar">Guardar datos</string>

</resources>