<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/DIAGNOSTICO_TITULO"
                android:layout_width="350dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="Inicio de su diagnóstico"
                android:textAlignment="center"
                android:textColor="@color/Titulo"
                android:textSize="50dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022" />

            <TextView
                android:id="@+id/DIAGNOSTICOTVIEW"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:width="1dp"
                android:background="@drawable/vineta"
                android:radius="15dp"
                android:text="@string/Introduccion"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:padding="10dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.248" />

            <TextView
                android:id="@+id/faltadatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:width="1dp"
                android:background="@drawable/falta"
                android:padding="10dp"
                android:radius="15dp"
                android:text="@string/faltadatos"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DIAGNOSTICOTVIEW"
                app:layout_constraintVertical_bias="0.050000012" />

            <TextView
                android:id="@+id/faltahabitos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:width="1dp"
                android:background="@drawable/falta"
                android:padding="10dp"
                android:radius="15dp"
                android:text="@string/faltahabitos"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faltadatos"
                app:layout_constraintVertical_bias="0.024" />

            <TextView
                android:id="@+id/faltaalimentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:width="1dp"
                android:background="@drawable/falta"
                android:padding="10dp"
                android:radius="15dp"
                android:text="@string/faltaalimentacion"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faltahabitos"
                app:layout_constraintVertical_bias="0.051" />

            <TextView
                android:id="@+id/faltasalud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:width="1dp"
                android:background="@drawable/falta"
                android:padding="10dp"
                android:radius="15dp"
                android:text="@string/faltasalud"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faltaalimentos"
                app:layout_constraintVertical_bias="0.064" />

        </LinearLayout>




    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>